Minor restructuring. Added main.md.
Created private folder, and moved html folder into private folder.
Created debug progress file private/debug-src/main.md.

--- a/private/html/test_cases/slash1/index.html
+++ b/private/html/test_cases/slash1/index.html
@@ -5,7 +5,7 @@
 <title>Prettifying Perl code</title>
 <!-- The defer is not necessary for autoloading, but is necessary for the
      script at the bottom to work as a Quine. -->
-<script src="../../../src/run_prettify.js"></script>
+<script src="../../../../src/run_prettify.js"></script>
 </head>
 <body> 
 <pre class="prettyprint lang-perl">
